Change parse syntax in decoders

--- a/src/engine/ruleset/integrations/syslog/decoders/syslog.yml
+++ b/src/engine/ruleset/integrations/syslog/decoders/syslog.yml
@@ -15,23 +15,22 @@ metadata:
     - https://www.ietf.org/rfc/rfc3164.txt
     - https://www.ietf.org/rfc/rfc5424.txt
 
-parse:
-  logpar:
+parse|event.original:
     # BSD Syslog RFC 3164 standard
-    - event.original: "<event.start/Jun 14 15:16:01> <host.hostname> <TAG/alphanumeric/->[<process.pid>]:<~/ignore/ ><message>"
+    - "<event.start/Jun 14 15:16:01> <host.hostname> <TAG/alphanumeric/->[<process.pid>]:<~/ignore/ ><message>"
     # BSD Syslog RFC 3164 no pid
-    - event.original: "<event.start/Jun 14 15:16:01> <host.hostname> <TAG/alphanumeric/->:<~/ignore/ ><message>"
+    - "<event.start/Jun 14 15:16:01> <host.hostname> <TAG/alphanumeric/->:<~/ignore/ ><message>"
 
     # BSD Syslog RFC 3164 standard ISO8601
-    - event.original: "<event.start/2018-08-14T14:30:02.203151+02:00> <host.hostname> <TAG/alphanumeric/->[<process.pid>]: <message>"
+    - "<event.start/2018-08-14T14:30:02.203151+02:00> <host.hostname> <TAG/alphanumeric/->[<process.pid>]: <message>"
     # BSD Syslog RFC 3164 no pid ISO8601
-    - event.original: "<event.start/2018-08-14T14:30:02.203151+02:00> <host.hostname> <TAG/alphanumeric/->: <message>"
+    - "<event.start/2018-08-14T14:30:02.203151+02:00> <host.hostname> <TAG/alphanumeric/->: <message>"
 
     # RFC3164 example 2 section 5.4
-    - event.original: <event.start/%b %d %T> <host.hostname> <message>
+    - <event.start/%b %d %T> <host.hostname> <message>
 
     # RFC3164 example 4 section 5.4
-    - event.original: "<event.start/%Y %b %d %T> <timezone> <host.hostname> <host.ip> <TAG/alphanumeric/->[<process.pid>]:<~/ignore/ ><message>"
+    - "<event.start/%Y %b %d %T> <timezone> <host.hostname> <host.ip> <TAG/alphanumeric/->[<process.pid>]:<~/ignore/ ><message>"
 
 normalize:
   - map:
