--- a/src/engine/ruleset/wazuh-core/decoders/dbsync/dbsync.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/dbsync/dbsync.yml
@@ -21,9 +21,8 @@ parents:
 check:
   - event.original: starts_with({)
 
-parse:
-  logpar:
-    - event.original: <json_event/json>
+parse|event.original:
+  - <json_event/json>
 
 normalize:
   - check:
