--- a/src/engine/ruleset/wazuh-core/decoders/fim/fim.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/fim/fim.yml
@@ -27,9 +27,8 @@ parents:
 check:
   - event.original: starts_with({)
 
-parse:
-  logpar:
-    - event.original: <json_event/json>
+parse|event.original:
+  - <json_event/json>
 
 normalize:
   - map:
