--- a/src/engine/ruleset/wazuh-core/decoders/syscollector/syscollector-base.yml
+++ b/src/engine/ruleset/wazuh-core/decoders/syscollector/syscollector-base.yml
@@ -26,9 +26,8 @@ check:
   - wazuh.origin: string_equal(syscollector)
   - event.original: starts_with({)
 
-parse:
-  logpar:
-    - event.original: <json_event/json>
+parse|event.original:
+  - <json_event/json>
 
 normalize:
   - map:
