--- a/src/engine/ruleset/integrations/apache-http/decoders/apache-access.yml
+++ b/src/engine/ruleset/integrations/apache-http/decoders/apache-access.yml
@@ -25,15 +25,14 @@ definitions:
   isSuccess: is_not_null($http.response.status_code) AND int_less($http.response.status_code,400)
   isFailed: is_not_null($http.response.status_code) AND int_greater_or_equal($http.response.status_code,400)
 
-parse:
-  logpar:
-    - event.original: <source.address> - <user.name> [<event.created/26\/Dec\/2016:18:23:35 +0200>] "<_http_request/text>" <http.response.status_code> <_ignore/literal/->?<http.response.body.bytes>(? "<http.request.referrer>" "<user_agent.original>")
-    - event.original: <source.address> - <user.name> [<event.created/26\/Dec\/2016:18:23:35 +0200>] "-" <http.response.status_code> -
-    - event.original: <source.address> - - [<event.created/%a %b %d %T %Y/en_US.UTF-8>] "-" <http.response.status_code> -
-    - event.original: <destination.domain> <source.address> - <user.name> [<event.created/%a %b %d %T %Y/en_US.UTF-8>] "<http.request.method> <_url_orig> <http.version>?<_dash>" <http.response.status_code> <http.response.body.bytes>?<_dash> "<http.request.referrer>" "<user_agent.original>"
-    - event.original: <source.address> - - [<event.created/%a %b %d %T %Y/en_US.UTF-8>] "<http.request.method> <_url_orig> <http.version>?<_dash>" <http.response.status_code> <http.response.body.bytes>?<_dash> "<http.request.referrer>" "<user_agent.original>"
-    - event.original: <source.address> - <user.name> [<event.created/%a %b %d %T %Y/en_US.UTF-8>] "<http.request.method> <_url_orig> <http.version>?<_dash>" <http.response.status_code> <http.response.body.bytes>?<_dash> "<http.request.referrer>" "<user_agent.original>"
-    - event.original: '[<event.created/%a %b %d %T %Y/en_US.UTF-8>] <source.address> <network.protocol> <tls.cipher> "<http.request.method> <_url_orig> <http.version>" <http.response.body.bytes>?<_dash>'
+parse|event.original:
+  - <source.address> - <user.name> [<event.created/26\/Dec\/2016:18:23:35 +0200>] "<_http_request/text>" <http.response.status_code> <_ignore/literal/->?<http.response.body.bytes>(? "<http.request.referrer>" "<user_agent.original>")
+  - <source.address> - <user.name> [<event.created/26\/Dec\/2016:18:23:35 +0200>] "-" <http.response.status_code> -
+  - <source.address> - - [<event.created/%a %b %d %T %Y/en_US.UTF-8>] "-" <http.response.status_code> -
+  - <destination.domain> <source.address> - <user.name> [<event.created/%a %b %d %T %Y/en_US.UTF-8>] "<http.request.method> <_url_orig> <http.version>?<_dash>" <http.response.status_code> <http.response.body.bytes>?<_dash> "<http.request.referrer>" "<user_agent.original>"
+  - <source.address> - - [<event.created/%a %b %d %T %Y/en_US.UTF-8>] "<http.request.method> <_url_orig> <http.version>?<_dash>" <http.response.status_code> <http.response.body.bytes>?<_dash> "<http.request.referrer>" "<user_agent.original>"
+  - <source.address> - <user.name> [<event.created/%a %b %d %T %Y/en_US.UTF-8>] "<http.request.method> <_url_orig> <http.version>?<_dash>" <http.response.status_code> <http.response.body.bytes>?<_dash> "<http.request.referrer>" "<user_agent.original>"
+  - '[<event.created/%a %b %d %T %Y/en_US.UTF-8>] <source.address> <network.protocol> <tls.cipher> "<http.request.method> <_url_orig> <http.version>" <http.response.body.bytes>?<_dash>'
 
 normalize:
   - map:
@@ -50,8 +49,8 @@ normalize:
       - tls.version_protocol: $_tls/0
       - tls.cipher: $tls.cipher
 
-    logpar:
-      - _http_request: <http.request.method> <url.original> HTTP/<http.version>
+    parse|_http_request:
+      - <http.request.method> <url.original> HTTP/<http.version>
 
   - check:
       - _tls-1: regex_match(\\d+\\.\\d+)
