--- a/src/engine/ruleset/integrations/system/decoders/system-auth.yml
+++ b/src/engine/ruleset/integrations/system/decoders/system-auth.yml
@@ -57,15 +57,15 @@ normalize:
 
   - check:
       - process.name: "sshd"
-    logpar:
-      - message: <_system.auth.ssh.event> <_system.auth.ssh.method> for <user.name> from <source.ip> port <source.port> ssh2(?:<~>)
-      - message: <_system.auth.ssh.event> user <user.name> from <source.ip>(? port <source.port>)
-      - message: Did not receive identification string from <source.ip>
-      - message: subsystem request for <_system.auth.ssh.subsystem> by user <user.name>
-      - message: "<_system.auth.ssh.session.action>: Too many authentication <_system.auth.ssh.event> for <user.name> [preauth]"
-      - message: "<user.name> [<~>][<~>]: <_system.auth.ssh.event>: <_system.auth.ssh.session.process_id> tty<~/literal/\\/>?<~/literal/s><_system.process.tty.char_device.major>"
-      - message: "<_system.auth.ssh.event>: Read from socket failed: Connection reset by peer [preauth]"
-      - message: "Received <_system.auth.ssh.event> from <source.ip>: <~>:  [<~>]"
+    parse|message:
+      - <_system.auth.ssh.event> <_system.auth.ssh.method> for <user.name> from <source.ip> port <source.port> ssh2(?:<~>)
+      - <_system.auth.ssh.event> user <user.name> from <source.ip>(? port <source.port>)
+      - Did not receive identification string from <source.ip>
+      - subsystem request for <_system.auth.ssh.subsystem> by user <user.name>
+      - "<_system.auth.ssh.session.action>: Too many authentication <_system.auth.ssh.event> for <user.name> [preauth]"
+      - "<user.name> [<~>][<~>]: <_system.auth.ssh.event>: <_system.auth.ssh.session.process_id> tty<~/literal/\\/>?<~/literal/s><_system.process.tty.char_device.major>"
+      - "<_system.auth.ssh.event>: Read from socket failed: Connection reset by peer [preauth]"
+      - "Received <_system.auth.ssh.event> from <source.ip>: <~>:  [<~>]"
 
   - check: $_system.auth.ssh.event=="Accepted" OR $_system.auth.ssh.event=="USER_PROCESS"
     map:
@@ -90,28 +90,28 @@ normalize:
 
   - check:
       - process.name: sudo
-    logpar:
-      - message: "<user.name> : <_system.auth.sudo.error> ; TTY=tty<~/literal/\\/>?<~/literal/s><_system.process.tty.char_device.major> ; PWD=<_system.auth.sudo.pwd> ; USER=<user.effective.name> ; COMMAND=<_system.auth.sudo.command>"
-      - message: "<user.name> : TTY=tty<~/literal/\\/>?<~/literal/s><_system.process.tty.char_device.major> ; PWD=<_system.auth.sudo.pwd> ; USER=<user.effective.name> ; COMMAND=<_system.auth.sudo.command>"
+    parse|message:
+      - "<user.name> : <_system.auth.sudo.error> ; TTY=tty<~/literal/\\/>?<~/literal/s><_system.process.tty.char_device.major> ; PWD=<_system.auth.sudo.pwd> ; USER=<user.effective.name> ; COMMAND=<_system.auth.sudo.command>"
+      - "<user.name> : TTY=tty<~/literal/\\/>?<~/literal/s><_system.process.tty.char_device.major> ; PWD=<_system.auth.sudo.pwd> ; USER=<user.effective.name> ; COMMAND=<_system.auth.sudo.command>"
     map:
       - event.category: array_append(process)
       - event.type: array_append(start)
 
   - check:
       - message: contains(pam_)
-    logpar:
-      - message: "pam_unix\\(<~>:<~>\\): session <_system.auth.pam.session.action> for user <_system.auth.pam.foruser.name> by <_system.auth.pam.byuser.name>\\(uid=\\)"
-      - message: "pam_unix\\(<~>:<~>\\): session <_system.auth.pam.session.action> for user <_system.auth.pam.foruser.name> by \\(uid=<user.id>\\)"
-      - message: "pam_unix\\(<~>:<~>\\): session <_system.auth.pam.session.action> for user <_system.auth.pam.foruser.name>"
-      - message: "pam_succeed_if\\(<~>:<~>\\): requirement <~> not met by user <user.name>"
-      - message: "pam_unix\\(<~>:<~>\\): authentication <_system.auth.pam.session.action>; logname=<_system.auth.pam.foruser.name>?<~/literal/> uid=<user.id>?<~/literal/> euid=<user.effective.id>?<~/literal/> tty=<_system.auth.pam.tty>?<~/literal/> ruser=<_system.auth.pam.remote.user>?<~/literal/> rhost=<source.ip>?<~/literal/>  user=<user.name>?<~/literal/>"
+    parse|message:
+      - "pam_unix\\(<~>:<~>\\): session <_system.auth.pam.session.action> for user <_system.auth.pam.foruser.name> by <_system.auth.pam.byuser.name>\\(uid=\\)"
+      - "pam_unix\\(<~>:<~>\\): session <_system.auth.pam.session.action> for user <_system.auth.pam.foruser.name> by \\(uid=<user.id>\\)"
+      - "pam_unix\\(<~>:<~>\\): session <_system.auth.pam.session.action> for user <_system.auth.pam.foruser.name>"
+      - "pam_succeed_if\\(<~>:<~>\\): requirement <~> not met by user <user.name>"
+      - "pam_unix\\(<~>:<~>\\): authentication <_system.auth.pam.session.action>; logname=<_system.auth.pam.foruser.name>?<~/literal/> uid=<user.id>?<~/literal/> euid=<user.effective.id>?<~/literal/> tty=<_system.auth.pam.tty>?<~/literal/> ruser=<_system.auth.pam.remote.user>?<~/literal/> rhost=<source.ip>?<~/literal/>  user=<user.name>?<~/literal/>"
     map:
       - event.category: array_append(authentication, session)
 
   - check:
       - message: contains(PAM)
-    logpar:
-      - message: "PAM <~> more authentication <_system.auth.pam.session.action>; logname=<_system.auth.pam.foruser.name>?<~/literal/> uid=<user.id>?<~/literal/> euid=<user.effective.id>?<~/literal/> tty=<_system.auth.pam.tty>?<~/literal/> ruser=<_system.auth.pam.remote.user>?<~/literal/> rhost=<source.ip>?<~/literal/>  user=<user.name>?<~/literal/>"
+    parse|message:
+      - "PAM <~> more authentication <_system.auth.pam.session.action>; logname=<_system.auth.pam.foruser.name>?<~/literal/> uid=<user.id>?<~/literal/> euid=<user.effective.id>?<~/literal/> tty=<_system.auth.pam.tty>?<~/literal/> ruser=<_system.auth.pam.remote.user>?<~/literal/> rhost=<source.ip>?<~/literal/>  user=<user.name>?<~/literal/>"
     map:
       - event.category: array_append(authentication, session)
 
@@ -135,11 +135,11 @@ normalize:
       - event.type: array_append(end)
 
   - check: $process.name=="groupadd" OR $process.name=="useradd"
-    logpar:
-      - message: "new group: name=<group.name>, GID=<group.id>"
-      - message: "new user: name=<user.name>, UID=<user.id>, GID=<group.id>, home=<_system.auth.useradd.home>, shell=<_system.auth.useradd.shell>(?,<~>)"
-      - message: "group added to <file.name>: name=<group.name>(?, GID=<group.id>)"
-      - message: "<_system.auth.event.outcome> adding user '<user.name>'(?,<~>)"
+    parse|message:
+      - "new group: name=<group.name>, GID=<group.id>"
+      - "new user: name=<user.name>, UID=<user.id>, GID=<group.id>, home=<_system.auth.useradd.home>, shell=<_system.auth.useradd.shell>(?,<~>)"
+      - "group added to <file.name>: name=<group.name>(?, GID=<group.id>)"
+      - "<_system.auth.event.outcome> adding user '<user.name>'(?,<~>)"
 
   - check: $_system.auth.event.outcome=="failed" OR $_system.auth.pam.session.action=="failure"
     map:
