--- a/src/engine/ruleset/integrations/windows/decoders/windows-event.yml
+++ b/src/engine/ruleset/integrations/windows/decoders/windows-event.yml
@@ -18,6 +18,7 @@ check:
 normalize:
   - map:
       - windows: parse_xml($event.original, windows)
+
       - event.dataset: general
       - event.start: $windows.System.TimeCreated.@SystemTime
       - event.code: $windows.System.EventID.#text
@@ -27,13 +28,13 @@ normalize:
 
       - host.name: $windows.System.Computer.#text
 
-      - _MapWindowsLevelToLogLevel:
+      - _win_log_level:
           "0": "Audit"
           "1": "Critical"
           "2": "Error"
           "3": "Warning"
           "4": "Information"
           "5": "Verbose"
-      - log.level: get_value($_MapWindowsLevelToLogLevel, $windows.System.Level.#text)
+      - log.level: get_value($_win_log_level, $windows.System.Level.#text)
 
       - wazuh.decoders: array_append(windows-event)
