Apply PR comments

--- a/src/engine/ruleset/integrations/system/decoders/sysmon-linux.yml
+++ b/src/engine/ruleset/integrations/system/decoders/sysmon-linux.yml
@@ -27,7 +27,7 @@ check:
   # - event.module=='sysmon-linux'
 
 parse|message:
-  - "<_sysmon/xml/windows>"
+  - <_sysmon/xml/windows>
 
 # Log level mapping
 definitions:
