--- a/ruleset/sca/ubuntu/cis_ubuntu18-04-LTS.yml
+++ b/ruleset/sca/ubuntu/cis_ubuntu18-04-LTS.yml
@@ -8,12 +8,12 @@
 # Foundation
 #
 # Based on:
-# Center for Internet Security Ubuntu Linux 18.04 LTS Benchmark v2.0.1 - 01-03-2020
+# Center for Internet Security Ubuntu Linux 18.04 LTS Benchmark v2.1.0 - 03-23-2021
 
 policy:
   id: "cis_ubuntu18-04"
   file: "cis_ubuntu18-04.yml"
-  name: "CIS Ubuntu Linux 18.04 LTS Benchmark v2.0.1"
+  name: "CIS Ubuntu Linux 18.04 LTS Benchmark v2.1.0"
   description: "This document provides prescriptive guidance for establishing a secure configuration posture for Ubuntu Linux 18.04 LTS."
   references:
     - https://www.cisecurity.org/cis-benchmarks/
@@ -148,7 +148,7 @@ checks:
       - https://www.freedesktop.org/wiki/Software/systemd/APIFileSystems/
     condition: all
     rules:
-      - 'c:mount -> r:\s/tmp\s'
+      - 'c:findmnt -n /tmp -> r:\s*/tmp\s'
 
   # 1.1.3 Ensure nodev option set on /tmp partition. (Automated)
   - id: 18509
@@ -162,9 +162,9 @@ checks:
       - pci_dss: ["2.2.4"]
       - nist_800_53: ["CM.1"]
       - tsc: ["CC5.2"]
-    condition: all
+    condition: none
     rules:
-      - 'c:mount -> r:\s/tmp\s && r:nodev'
+      - 'c:findmnt -n /tmp -> r:\s*/tmp\s && r:nodev'
 
   # 1.1.4 Ensure nosuid option set on /tmp partition. (Automated)
   - id: 18510
@@ -178,9 +178,9 @@ checks:
       - pci_dss: ["2.2.4"]
       - nist_800_53: ["CM.1"]
       - tsc: ["CC5.2"]
-    condition: all
+    condition: none
     rules:
-      - 'c:mount -> r:\s/tmp\s && r:nosuid'
+      - 'c:findmnt -n /tmp -> r:\s*/tmp\s && r:nosuid'
 
   # 1.1.5 Ensure noexec option set on /tmp partition. (Automated)
   - id: 18511
@@ -194,9 +194,9 @@ checks:
       - pci_dss: ["2.2.4"]
       - nist_800_53: ["CM.1"]
       - tsc: ["CC5.2"]
-    condition: all
+    condition: none
     rules:
-      - 'c:mount -> r:\s/tmp\s && r:noexec'
+      - 'c:findmnt -n /tmp -> r:\s*/tmp\s && r:noexec'
 
   # 1.1.6 Ensure /dev/shm is configured. (Automated)
   - id: 32524
@@ -213,7 +213,7 @@ checks:
       - tsc: ["CC5.2"]
     condition: all
     rules:
-      - 'c:findmnt --kernel /dev/shm -> r:^/dev/shm\s'
+      - 'c:findmnt -n /dev/shm -> r:\s*/dev/shm\s'
 
   # 1.1.7 Ensure nodev option set on /dev/shm partition. (Automated)
   - id: 18521
@@ -227,9 +227,9 @@ checks:
       - pci_dss: ["2.2.4"]
       - nist_800_53: ["CM.1"]
       - tsc: ["CC5.2"]
-    condition: all
+    condition: none
     rules:
-      - 'c:mount -> r:\s/dev/shm\s && r:nodev'
+      - 'c:findmnt -n /dev/shm -> r:\s*/dev/shm\s && r:nodev'
 
   # 1.1.8 Ensure nosuid option set on /dev/shm partition. (Automated)
   - id: 18522
@@ -243,9 +243,9 @@ checks:
       - pci_dss: ["2.2.4"]
       - nist_800_53: ["CM.1"]
       - tsc: ["CC5.2"]
-    condition: all
+    condition: none
     rules:
-      - 'c:mount -> r:\s/dev/shm\s && r:nosuid'
+      - 'c:findmnt -n /dev/shm -> r:\s*/dev/shm\s && r:nosuid'
 
   # 1.1.9 Ensure noexec option set on /dev/shm partition. (Automated)
   - id: 18523
@@ -259,9 +259,9 @@ checks:
       - pci_dss: ["2.2.4"]
       - nist_800_53: ["CM.1"]
       - tsc: ["CC5.2"]
-    condition: all
+    condition: none
     rules:
-      - 'c:mount -> r:\s/dev/shm\s && r:noexec'
+      - 'c:findmnt -n /dev/shm  -> r:\s*/dev/shm\s && r:noexec'
 
   # 1.1.10 Ensure separate partition exists for /var. (Automated)
   - id: 18512
@@ -279,7 +279,7 @@ checks:
       - http://tldp.org/HOWTO/LVM-HOWTO/
     condition: all
     rules:
-      - 'c:mount -> r:\s/var\s'
+      - 'c:findmnt -n /var -> r:\s*/var\s'
 
   # 1.1.11 Ensure separate partition exists for /var/tmp (Automated)
   - id: 18513
@@ -297,7 +297,7 @@ checks:
       - http://tldp.org/HOWTO/LVM-HOWTO/
     condition: all
     rules:
-      - 'c:mount -> r:\s/var/tmp\s'
+      - 'c:findmnt -n /var/tmp -> r:\s*/var/tmp\s'
 
   # 1.1.12 Ensure /var/tmp partition includes the nodev option (Automated)
   - id: 18514
@@ -311,9 +311,9 @@ checks:
       - pci_dss: ["2.2.4"]
       - nist_800_53: ["CM.1"]
       - tsc: ["CC5.2"]
-    condition: all
+    condition: none
     rules:
-      - 'c:mount -> r:\s/var/tmp\s && r:nodev'
+      - 'c: findmnt -n /var/tmp -> r:\s*/var/tmp\s && r:nodev'
 
   # 1.1.13 Ensure /var/tmp partition includes the nosuid option (Automated)
   - id: 18515
@@ -327,9 +327,9 @@ checks:
       - pci_dss: ["2.2.4"]
       - nist_800_53: ["CM.1"]
       - tsc: ["CC5.2"]
-    condition: all
+    condition: none
     rules:
-      - 'c:mount -> r:\s/var/tmp\s && r:nosuid'
+      - 'c:findmnt -n /var/tmp -> r:\s*/var/tmp\s && r:nosuid'
 
   # 1.1.14 Ensure /var/tmp partition includes the noexec option (Automated)
   - id: 18516
@@ -343,9 +343,9 @@ checks:
       - pci_dss: ["2.2.4"]
       - nist_800_53: ["CM.1"]
       - tsc: ["CC5.2"]
-    condition: all
+    condition: none
     rules:
-      - 'c:mount -> r:\s/var/tmp\s && r:noexec'
+      - 'c:findmnt -n /var/tmp -> r:\s*/var/tmp\s && r:noexec'
 
   # 1.1.15 Ensure separate partition exists for /var/log (Automated)
   - id: 18517
@@ -363,7 +363,7 @@ checks:
       - http://tldp.org/HOWTO/LVM-HOWTO/
     condition: all
     rules:
-      - 'c:mount -> r:\s/var/log\s'
+      - 'c:findmnt -n /var/log -> r:\s*/var/log\s'
 
   # 1.1.16 Ensure separate partition exists for /var/log/audit (Automated)
   - id: 18518
@@ -381,7 +381,7 @@ checks:
       - http://tldp.org/HOWTO/LVM-HOWTO/
     condition: all
     rules:
-      - 'c:mount -> r:\s/var/log/audit\s'
+      - 'c:findmnt -n /var/log/audit -> r:\s*/var/log/audit\s'
 
   # 1.1.17 Ensure separate partition exists for /home (Automated)
   - id: 18519
@@ -399,7 +399,7 @@ checks:
       - http://tldp.org/HOWTO/LVM-HOWTO/
     condition: all
     rules:
-      - 'c:mount -> r:\s/home\s'
+      - 'c:findmnt -n /home -> r:\s*/home\s'
 
   # 1.1.18 Ensure /home partition includes the nodev option (Automated)
   - id: 18520
@@ -413,9 +413,9 @@ checks:
       - pci_dss: ["2.2.4"]
       - nist_800_53: ["CM.1"]
       - tsc: ["CC5.2"]
-    condition: all
+    condition: none
     rules:
-      - 'c:mount -> r:\s/home\s && r:nodev'
+      - 'c:findmnt -n /home -> r:\s*/home\s && r:nodev'
 
   # 1.1.19 Ensure nodev option set on removable media partitions (Manual) - Not Implemented
   # 1.1.20 Ensure nosuid option set on removable media partitions (Manual) - Not Implemented
