Created iterator class

--- a/src/shared_modules/utils/tests/CMakeLists.txt
+++ b/src/shared_modules/utils/tests/CMakeLists.txt
@@ -29,6 +29,7 @@ file(GLOB UTIL_CXX_UNITTEST_LINUX_SRC
     "linuxInfoHelper_test.cpp"
     "socketWrapper_test.cpp"
     "socket_test.cpp"
+    "rocksDBIterator_test.cpp"
     "rocksDBSafeQueue_test.cpp"
     "rocksDBWrapper_test.cpp"
     "threadEventDispatcher_test.cpp"
